# Noodle-backend

./: Dockerfile  ModelTraining.py  Procfile  ai.py  condaenv.txt  contract.py  pyproject.toml  requirements.txt  server.py
